<resources>
    <string name="app_name">mQespol</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan">Scan</string>
    <string name="add">Add</string>
    <string name="lbl_nameDevice">Name Device</string>
    <string name="scanDevices">Network Devices</string>
    <string name="listDevices">Devices List</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="addDevices">Add Devices</string>
    <string name="showSensors">Show Sensors</string>
    <string name="showDevices">Show Devices</string>
    <string name="showServer">Server</string>
    <string name="Mqtt">Mqtt Conection</string>
     <string name="informationBroker">Information Broker</string>
    <string name="reconnect">RECONNECT</string>
    <string name="enviar">Enviar Data</string>


</resources>