<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_conf"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/fragmentAddDevice"
                android:icon="@drawable/ic_baseline_add_circle_24"
                android:title="@string/addDevices" />

            <item
                android:id="@+id/fragment_showSensor"
                android:icon="@drawable/ic_show"
                android:title="@string/showSensors" />
            <item
                android:id="@+id/fragmentListDevice"
                android:icon="@drawable/ic_show"
                android:title="@string/showDevices" />
            <item
                android:id="@+id/fragmentInformation"
                android:icon="@drawable/ic_info"
                android:title="@string/informationBroker" />
        </menu>
    </item>
</menu>