<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FragmentAddDevice">
    <TextView
        android:id="@+id/txt_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scanDevices"
        android:textColor="#1F3333"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/guidelineMid"
        app:layout_constraintBottom_toTopOf="@id/guidelineTop"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelin5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.59" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_ssid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guidelineMid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/ssid_item" />

<!--    <Button-->
<!--        android:id="@+id/btn_wifi"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/stylebtn"-->
<!--        android:text="Wifi ON"-->
<!--        android:textSize="15sp"-->
<!--        android:textColor="#030404"-->
<!--        app:layout_constraintStart_toStartOf="@id/guidelineStart"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/guideline2"-->
<!--        />-->

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        android:textColor="@color/blueblac"
        android:background="@drawable/stylebtn"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        />

    <EditText
        android:id="@+id/lbl_NameDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_nameDevice"
        android:textSize="15sp"
        android:textColorHint="@color/blueblac"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintBottom_toBottomOf="@+id/guideline4"/>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@drawable/stylebtn"
        android:textSize="15sp"
        android:text="@string/add"
        android:textColor="@color/blueblac"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintBottom_toBottomOf="@id/guidelin5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

</androidx.constraintlayout.widget.ConstraintLayout>